# pads

./: Cargo.toml  README.md
.github/workflows/: aur-build.yml
src/: main.rs
