[package]
name = "pads"
version = "0.2.5"
edition = "2021"
description = "A simple CLI tool for swtiching the default/active output device for PulseAudio."
license = "MIT"
repository = "https://github.com/dogue/pads"
readme = "README.md"
author = "Dogue"
keywords = ["pulseaudio", "audio-devices"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
clap_derive = "4.0.21"
pulsectl-rs = "0.3.2"
