[package]
name = "pads"
version = "0.2.7"
edition = "2021"
description = "A simple CLI tool for swtiching the default/active output device for PulseAudio."
license = "MIT"
repository = "https://github.com/dogue/pads"
readme = "README.md"
authors = ["Dogue"]
keywords = ["pulseaudio", "audio-devices"]
categories = ["command-line-utilities"]
homepage = "https://github.com/dogue/pads"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
libpulse-sys = "1.21.0"
pulsectl-rs = "0.3.2"
serde = { version = "^1", features = ["derive"] }
serde_json = "1.0"
